Responsiveness and Alignment Fixes

--- a/guru-react/src/App.css
+++ b/guru-react/src/App.css
@@ -10,9 +10,11 @@ body {
 .app-body {
   flex-grow: 1;
   background-color: #fff;
-  padding-bottom: 10em;
+  padding-bottom: 8em;
   padding-left: 1em;
   padding-right: 1em;
+  word-break: break-all;
+  overflow-x: hidden;
 }
 
 .chip {
@@ -103,7 +105,7 @@ body {
   text-align: center;
   top: 10vh;
   max-height: 80vh;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
   max-width: 90%;
   margin: auto;
@@ -125,7 +127,7 @@ body {
     padding-top: 3.5em;
   }
   .app-body {
-    padding-bottom: 35em;
+    padding-bottom: 35em !important;
   }
   div.MuiContainer-root {
     padding: 0;
@@ -141,7 +143,7 @@ body {
 
 @media only screen and (min-width: 601px) and (max-width: 960px) {
   .app-body {
-    padding-bottom: 30em;
+    padding-bottom: 28em !important;
   }
   div.MuiContainer-root {
     padding: 0;
